--- a/index.css
+++ b/index.css
@@ -7,26 +7,39 @@ html {
     box-sizing: inherit;
 }
 body {
-    font-family: Outfit, sans-serif;
+    font-family: 'Outfit', sans-serif;
+    font-size: 15px;
     background: hsl(212, 45%, 89%);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-#main {
+.card {
+    width: 325px;
+    margin-top: 5%;
     background: hsl(0, 0%, 100%);
-    width: 300px;
-    height: 500px;
-    border-radius: 20px;
+    border-radius: 1.25em;
     display: flex;
+    flex-direction: column;
     justify-content: center;
 }
-img {
-    width: 260px;
-    height: 260px;
-    margin: 20px;
-    border-radius: 20px;
+.card img {
+    margin: 1.25em;
+    border-radius: 1em;
+}
+h1 {
+    color: hsl(218, 44%, 22%);
+    font-size: 1.5em;
+    font-weight: 700;
+    text-align: center;
+    margin: 0 1.5rem .8rem 1.5rem;
+}
+p {
+    color: hsl(220, 15%, 55%);
+    font-weight: 400;
+    text-align: center;
+    margin: 1rem 1.4rem 3rem 1.4rem;
 }
 .attribution {
     margin-top: 20px;
